# tcp_client_server_qt_c-

./: README.md
client/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  packetbuilder.cpp  packetbuilder.h  packethandler.cpp  packethandler.h  serializer.cpp  serializer.h  structs.h
protofiles/: IAuthRequest.pb.cc  IAuthRequest.pb.h  IAuthResponse.pb.cc  IAuthResponse.pb.h
protofiles/txt/: IAuthRequest.proto  IAuthResponse.proto
server/: CMakeLists.txt  IDbHandler.h  main.cpp  packetbuilder.cpp  packetbuilder.h  packethandler.cpp  packethandler.h  postgresdb.cpp  postgresdb.h  serializer.cpp  serializer.h  server.cpp  server.h  structs.h
